update dfs